# music-sync

./: .gitignore  Pipfile  README.md  cli.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
music_sync/: __init__.py
music_sync/core/: MusicSync.py  config.py  logging.py  schema.py  utils.py
music_sync/core/apps/: App.py  AppRegistry.py  __init__.py
music_sync/core/download/: ArchiveParser.py  Downloader.py  MetadataActions.py  __init__.py  test_MetadataActions.py
music_sync/m3u/: apps.py
music_sync/soundcloud/: api.py  apps.py
