[project]
name = "music-sync"
version = "0.1.0"
description = "Sync your downloaded music with your online platforms"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "colorlog>=6.9.0",
    "marshmallow>=3.26.0",
    "pyxdg>=0.28",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "yt-dlp>=2025.1.15",
]
